--- a/src/layout/Header/styles.module.css
+++ b/src/layout/Header/styles.module.css
@@ -8,6 +8,7 @@
 .header > div{
   display: flex;
   align-items: center;
+  position: relative;
 }
 .header > div:first-child, .header > div:last-child{
   width: 10%;
